Service account for teams
Signed-off-by: muralibasani <muralidahr.basani@aiven.io>